crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_all_typeless_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type EnqueueJobResponse struct {
	Status int `json:"status"`
}
