crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_errors_server.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
	"strings"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("PUT /api/users/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := r.PathValue("id")
		result, err := h.UpsertUser(id)
		if err != nil {
			if strings.Contains(err.Error(), "ValidationError") {
				http.Error(w, "ValidationError", 400)
				return
			}
			if strings.Contains(err.Error(), "Unauthorized") {
				http.Error(w, "Unauthorized", 401)
				return
			}
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		if result == nil {
			http.Error(w, "handler returned nil result", http.StatusInternalServerError)
			return
		}
		switch result.Status {
		case 200, 201:
			if result.Body == nil {
				http.Error(w, "handler returned no body for a typed status", http.StatusInternalServerError)
				return
			}
		default:
			http.Error(w, "handler returned undeclared status", http.StatusInternalServerError)
			return
		}
		if result.Body != nil {
			w.Header().Set("Content-Type", "application/json")
			w.WriteHeader(result.Status)
			json.NewEncoder(w).Encode(result.Body)
		} else {
			w.WriteHeader(result.Status)
		}
	})
	return mux
}
