crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_inputs_client.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strconv"
)

// ApiClient is a typed HTTP client for the API.
type ApiClient struct {
	BaseURL string
	Client  *http.Client
}

// NewApiClient creates a new API client with the given base URL.
func NewApiClient(baseURL string) *ApiClient {
	return &ApiClient{BaseURL: baseURL, Client: http.DefaultClient}
}
func (c *ApiClient) RestartJob(id string, priority int64, authorization string, traceId *string) (*RestartJobResponse, error) {
	u := fmt.Sprintf("%s/api/jobs/%s/restart", c.BaseURL, id)
	q := url.Values{}
	q.Set("priority", strconv.FormatInt(priority, 10))
	u += "?" + q.Encode()
	req, err := http.NewRequest("POST", u, nil)
	if err != nil {
		return nil, err
	}
	req.Header.Set("Authorization", authorization)
	if traceId != nil {
		req.Header.Set("Trace-Id", *traceId)
	}
	resp, err := c.Client.Do(req)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("HTTP %d", resp.StatusCode)
	}
	result := RestartJobResponse{Status: resp.StatusCode}
	if resp.ContentLength != 0 {
		var body Job
		if err := json.NewDecoder(resp.Body).Decode(&body); err != nil && err != io.EOF {
			return nil, err
		} else if err == nil {
			result.Body = &body
		}
	}
	return &result, nil
}
