crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_mixed_client.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"fmt"
	"io"
	"net/http"
)

// ApiClient is a typed HTTP client for the API.
type ApiClient struct {
	BaseURL string
	Client  *http.Client
}

// NewApiClient creates a new API client with the given base URL.
func NewApiClient(baseURL string) *ApiClient {
	return &ApiClient{BaseURL: baseURL, Client: http.DefaultClient}
}
func (c *ApiClient) UpdateUser(id string) (*UpdateUserResponse, error) {
	u := fmt.Sprintf("%s/api/users/%s", c.BaseURL, id)
	req, err := http.NewRequest("PUT", u, nil)
	if err != nil {
		return nil, err
	}
	resp, err := c.Client.Do(req)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("HTTP %d", resp.StatusCode)
	}
	result := UpdateUserResponse{Status: resp.StatusCode}
	if resp.ContentLength != 0 {
		var body User
		if err := json.NewDecoder(resp.Body).Decode(&body); err != nil && err != io.EOF {
			return nil, err
		} else if err == nil {
			result.Body = &body
		}
	}
	return &result, nil
}
