crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_mixed_handlers.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

package api

// Handlers defines the interface that server implementations must satisfy.
type Handlers interface {
	UpdateUser(id string) (*UpdateUserResponse, error)
}
