crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_mixed_server.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"encoding/json"
	"net/http"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("PUT /api/users/{id}", func(w http.ResponseWriter, r *http.Request) {
		id := r.PathValue("id")
		result, err := h.UpdateUser(id)
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		if result == nil {
			http.Error(w, "handler returned nil result", http.StatusInternalServerError)
			return
		}
		switch result.Status {
		case 200:
			if result.Body == nil {
				http.Error(w, "handler returned no body for a typed status", http.StatusInternalServerError)
				return
			}
		case 204:
			if result.Body != nil {
				http.Error(w, "handler returned a body for a bodyless status", http.StatusInternalServerError)
				return
			}
		default:
			http.Error(w, "handler returned undeclared status", http.StatusInternalServerError)
			return
		}
		if result.Body != nil {
			w.Header().Set("Content-Type", "application/json")
			w.WriteHeader(result.Status)
			json.NewEncoder(w).Encode(result.Body)
		} else {
			w.WriteHeader(result.Status)
		}
	})
	return mux
}
